--- a/build.gradle
+++ b/build.gradle
@@ -27,9 +27,9 @@ repositories {
 ext['springCloudVersion'] = 'Greenwich.M3'
 
 dependencies {
-	implementation('org.springframework.boot:spring-boot-starter')
 	implementation('org.springframework.cloud:spring-cloud-starter-config')
 	implementation('org.springframework.cloud:spring-cloud-starter-openfeign')
+	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client')
 	compileOnly('org.projectlombok:lombok')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
