--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -6,4 +6,9 @@ spring:
     name: customer-service
   cloud:
     config:
-      uri: http://localhost:8888
+      uri:
+      - http://hyunwoo-kim.iptime.org:32000
+
+feign:
+  hystrix:
+    enabled: true
