--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -7,7 +7,7 @@ spring:
   cloud:
     config:
       uri:
-      - http://hyunwoo-kim.iptime.org:32000
+      - configuration.development.svc.cluster.local:8888
 
 feign:
   hystrix:
