--- a/deployment.yml
+++ b/deployment.yml
@@ -1,3 +1,17 @@
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  name: customer-service
+spec:
+  rules:
+  - host: customer-service.192.168.0.9.nip.io
+    http:
+      paths:
+      - path: /
+        backend:
+          serviceName: customer-service
+          servicePort: 31952
+---
 kind: Service
 apiVersion: v1
 metadata:
